changed most snapshot refs to released versions (commons, maven projects); still need to deal with xslt plugin though
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/1_1_2@377538 13f79535-47bb-0310-9956-ffa450edef68

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -51,7 +51,7 @@
                 <artifactItem>
                   <groupId>org.apache.myfaces.commons</groupId>
                   <artifactId>myfaces-commons</artifactId>
-                  <version>1.1.3-SNAPSHOT</version>
+                  <version>1.1.2</version>
                   <classifier>javadoc</classifier>
                 </artifactItem>
               </artifactItems>
@@ -80,7 +80,7 @@
                 <artifactItem>
                   <groupId>org.apache.myfaces.commons</groupId>
                   <artifactId>myfaces-commons</artifactId>
-                  <version>1.1.3-SNAPSHOT</version>
+                  <version>1.1.2</version>
                 </artifactItem>
               </artifactItems>
               <outputDirectory>${project.build.directory}/assembly-lib</outputDirectory>
@@ -125,7 +125,7 @@
       <plugin>
         <groupId>org.apache.myfaces.maven</groupId>
         <artifactId>wagon-maven-plugin</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
         <configuration>
           <id>myfaces-nightly-builds</id>
           <url>scpexe://minotaur.apache.org/www/cvs.apache.org/builds/myfaces/nightly</url>
