New tests for old bug, and dependency on shale-test
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@378439 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -88,6 +88,13 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>struts</groupId>
+      <artifactId>shale-test</artifactId>
+      <version>1.0.1-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
