--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -105,7 +105,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>xslt-maven-plugin</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
         <configuration>
           <xslFile>src/main/tld/misc/resolve_entities.xsl</xslFile>
           <srcIncludes>**/*.tld</srcIncludes>
@@ -185,7 +185,7 @@
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>xslt-maven-plugin</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
             <executions>
               <execution>
                 <id>generate-tld-for-tlddoc</id>
@@ -236,7 +236,7 @@
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>xslt-maven-plugin</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
             <executions>
               <execution>
                 <id>generate-tld-for-tlddoc</id>
