--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -48,12 +48,15 @@
                   <version>${version}</version>
                   <classifier>javadoc</classifier>
                 </artifactItem>
+                <!--
+                TODO/CHECK: o.a.m.impl.shared.* javadoc automatically included?
                 <artifactItem>
                   <groupId>org.apache.myfaces.commons</groupId>
                   <artifactId>myfaces-commons</artifactId>
                   <version>1.1.2</version>
                   <classifier>javadoc</classifier>
                 </artifactItem>
+                -->
               </artifactItems>
               <outputDirectory>${project.build.directory}/javadoc</outputDirectory>
             </configuration>
@@ -77,11 +80,13 @@
                   <artifactId>myfaces-impl</artifactId>
                   <version>${version}</version>
                 </artifactItem>
+                <!--
                 <artifactItem>
                   <groupId>org.apache.myfaces.commons</groupId>
                   <artifactId>myfaces-commons</artifactId>
                   <version>1.1.2</version>
                 </artifactItem>
+                -->
               </artifactItems>
               <outputDirectory>${project.build.directory}/assembly-lib</outputDirectory>
             </configuration>
