--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.apache.myfaces.core</groupId>
     <artifactId>myfaces-core-project</artifactId>
-    <version>1.1.2-SNAPSHOT</version>
+    <version>1.1.3-SNAPSHOT</version>
   </parent>
 
   <scm>
@@ -33,9 +33,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.myfaces.commons</groupId>
-      <artifactId>myfaces-commons</artifactId>
-      <version>1.1.2</version>
+      <groupId>org.apache.myfaces.shared</groupId>
+      <artifactId>myfaces-shared</artifactId>
+      <version>1.1.2-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
 
@@ -88,6 +88,13 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>struts</groupId>
+      <artifactId>shale-test</artifactId>
+      <version>1.0.1-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -105,7 +112,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>xslt-maven-plugin</artifactId>
-        <version>1.0</version>
+        <version>1.0-SNAPSHOT</version>
         <configuration>
           <xslFile>src/main/tld/misc/resolve_entities.xsl</xslFile>
           <srcIncludes>**/*.tld</srcIncludes>
@@ -185,7 +192,7 @@
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>xslt-maven-plugin</artifactId>
-            <version>1.0</version>
+            <version>1.0-SNAPSHOT</version>
             <executions>
               <execution>
                 <id>generate-tld-for-tlddoc</id>
@@ -236,7 +243,7 @@
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>xslt-maven-plugin</artifactId>
-            <version>1.0</version>
+            <version>1.0-SNAPSHOT</version>
             <executions>
               <execution>
                 <id>generate-tld-for-tlddoc</id>
