shared --> shared_impl refactoring
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/1_1_2@381120 13f79535-47bb-0310-9956-ffa450edef68

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -49,10 +49,10 @@
                   <classifier>javadoc</classifier>
                 </artifactItem>
                 <!--
-                TODO/CHECK: o.a.m.impl.shared.* javadoc automatically included?
+                TODO/CHECK: o.a.m.shared_impl.* javadoc automatically included?
                 <artifactItem>
-                  <groupId>org.apache.myfaces.commons</groupId>
-                  <artifactId>myfaces-commons</artifactId>
+                  <groupId>org.apache.myfaces.shared</groupId>
+                  <artifactId>myfaces-shared-impl</artifactId>
                   <version>1.1.2</version>
                   <classifier>javadoc</classifier>
                 </artifactItem>
