--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -36,14 +36,35 @@
       <groupId>org.apache.myfaces.shared</groupId>
       <artifactId>myfaces-shared-impl</artifactId>
       <version>2.0.0-SNAPSHOT</version>
-      <!-- myfaces-shared-impl classes will be included in myfaces-impl.jar -->
+      <!-- myfaces-shared-impl must not be included in assembly ! -->
       <scope>provided</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.3</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-el</groupId>
+      <artifactId>commons-el</artifactId>
+      <version>1.0</version>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
       <version>3.1</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.0.4</version>
       <scope>compile</scope>
     </dependency>
 
@@ -59,13 +80,6 @@
       <artifactId>servlet-api</artifactId>
       <version>2.3</version>
       <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
-      <version>1.0.4</version>
-      <scope>compile</scope>
     </dependency>
 
     <dependency>
@@ -144,7 +158,7 @@
                 <artifactItem>
                    <groupId>org.apache.myfaces.shared</groupId>
                    <artifactId>myfaces-shared-impl</artifactId>
-                   <version>1.1.2-SNAPSHOT</version>
+                   <version>2.0.0-SNAPSHOT</version>
                    <type>jar</type>
                  </artifactItem>
                </artifactItems>
