--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -32,13 +32,14 @@
       <scope>compile</scope>
     </dependency>
 
+    <!--
     <dependency>
       <groupId>org.apache.myfaces.shared</groupId>
       <artifactId>myfaces-shared-impl</artifactId>
       <version>2.0.0-SNAPSHOT</version>
-      <!-- myfaces-shared-impl must not be included in assembly ! -->
       <scope>provided</scope>
     </dependency>
+    -->
     
     <dependency>
       <groupId>commons-codec</groupId>
@@ -121,6 +122,10 @@
       <resource>
         <directory>src/main/resources-facesconfig</directory>
       </resource>
+      <resource>
+        <!-- because adding an additional resourceRoot not possible with antrun yet -->
+        <directory>target/refactored-shared-sources/main/resources</directory>
+      </resource>
     </resources>
 
     <plugins>
@@ -148,22 +153,61 @@
         <artifactId>dependency-maven-plugin</artifactId>
         <executions>
           <execution>
-            <id>unpack-shared-impl-classes</id>
-            <phase>process-classes</phase>
-            <goals>
-              <goal>unpack</goal>
-            </goals>
+            <id>unpack-sources</id>
+            <phase>generate-sources</phase>
+            <goals><goal>unpack</goal></goals>
             <configuration>
               <artifactItems>
                 <artifactItem>
                    <groupId>org.apache.myfaces.shared</groupId>
-                   <artifactId>myfaces-shared-impl</artifactId>
+                   <artifactId>myfaces-shared</artifactId>
                    <version>2.0.0-SNAPSHOT</version>
                    <type>jar</type>
+                   <classifier>sources</classifier>
                  </artifactItem>
                </artifactItems>
-               <outputDirectory>${project.build.directory}/classes</outputDirectory>
+               <outputDirectory>${project.build.directory}/unpacked-shared-sources</outputDirectory>
             </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      
+      <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>refactor-shared-sources</id>
+            <phase>process-sources</phase>
+            <configuration>
+              <tasks>
+                  <property name="refactor.src.dir" value="${project.build.directory}/unpacked-shared-sources"/>
+                  <property name="refactor.output.dir" value="${project.build.directory}/refactored-shared-sources/main/java"/>
+                  <property name="refactor.package.new" value="shared_impl"/>
+                  <ant dir="${project.basedir}" antfile="build.xml"
+                        inheritRefs="true" inheritAll="true">
+                    <target name="refactor-java-sources"/>
+                  </ant>
+              </tasks>
+              <sourceRoot>${project.build.directory}/refactored-shared-sources/main/java</sourceRoot>
+            </configuration>
+            <goals><goal>run</goal></goals>
+          </execution>
+          <execution>
+            <id>refactor-resources</id>
+            <phase>generate-resources</phase>
+            <configuration>
+              <tasks>
+                  <property name="refactor.src.dir" value="${project.build.directory}/unpacked-shared-sources"/>
+                  <property name="refactor.output.dir" value="${project.build.directory}/refactored-shared-sources/main/resources"/>
+                  <property name="refactor.package.new" value="shared_impl"/>
+                  <ant dir="${project.basedir}" antfile="build.xml"
+                        inheritRefs="true" inheritAll="true">
+                    <target name="refactor-resources"/>
+                  </ant>
+              </tasks>
+              <resourceRoot>${project.build.directory}/refactored-shared-sources/main/resources</resourceRoot> <!-- not yet supported -->
+            </configuration>
+            <goals><goal>run</goal></goals>
           </execution>
         </executions>
       </plugin>
