results of merge with the 1.1.2 branch (r378248 - r382005)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@382015 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -32,10 +32,26 @@
       <scope>compile</scope>
     </dependency>
 
+    <!--
     <dependency>
-      <groupId>org.apache.myfaces.commons</groupId>
-      <artifactId>myfaces-commons</artifactId>
-      <version>1.1.3-SNAPSHOT</version>
+      <groupId>org.apache.myfaces.shared</groupId>
+      <artifactId>myfaces-shared-impl</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    -->
+    
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.3</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-el</groupId>
+      <artifactId>commons-el</artifactId>
+      <version>1.0</version>
       <scope>compile</scope>
     </dependency>
 
@@ -43,6 +59,13 @@
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
       <version>3.1</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.0.4</version>
       <scope>compile</scope>
     </dependency>
 
@@ -58,13 +81,6 @@
       <artifactId>servlet-api</artifactId>
       <version>2.3</version>
       <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
-      <version>1.0.4</version>
-      <scope>compile</scope>
     </dependency>
 
     <dependency>
@@ -106,6 +122,10 @@
       <resource>
         <directory>src/main/resources-facesconfig</directory>
       </resource>
+      <resource>
+        <!-- because adding an additional resourceRoot not possible with antrun yet -->
+        <directory>target/refactored-shared-sources/main/resources</directory>
+      </resource>
     </resources>
 
     <plugins>
@@ -127,6 +147,71 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>dependency-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>unpack-sources</id>
+            <phase>generate-sources</phase>
+            <goals><goal>unpack</goal></goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                   <groupId>org.apache.myfaces.shared</groupId>
+                   <artifactId>myfaces-shared</artifactId>
+                   <version>2.0.0-SNAPSHOT</version>
+                   <type>jar</type>
+                   <classifier>sources</classifier>
+                 </artifactItem>
+               </artifactItems>
+               <outputDirectory>${project.build.directory}/unpacked-shared-sources</outputDirectory>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      
+      <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>refactor-shared-sources</id>
+            <phase>process-sources</phase>
+            <configuration>
+              <tasks>
+                  <property name="refactor.src.dir" value="${project.build.directory}/unpacked-shared-sources"/>
+                  <property name="refactor.output.dir" value="${project.build.directory}/refactored-shared-sources/main/java"/>
+                  <property name="refactor.package.new" value="shared_impl"/>
+                  <ant dir="${project.basedir}" antfile="build.xml"
+                        inheritRefs="true" inheritAll="true">
+                    <target name="refactor-java-sources"/>
+                  </ant>
+              </tasks>
+              <sourceRoot>${project.build.directory}/refactored-shared-sources/main/java</sourceRoot>
+            </configuration>
+            <goals><goal>run</goal></goals>
+          </execution>
+          <execution>
+            <id>refactor-resources</id>
+            <phase>generate-resources</phase>
+            <configuration>
+              <tasks>
+                  <property name="refactor.src.dir" value="${project.build.directory}/unpacked-shared-sources"/>
+                  <property name="refactor.output.dir" value="${project.build.directory}/refactored-shared-sources/main/resources"/>
+                  <property name="refactor.package.new" value="shared_impl"/>
+                  <ant dir="${project.basedir}" antfile="build.xml"
+                        inheritRefs="true" inheritAll="true">
+                    <target name="refactor-resources"/>
+                  </ant>
+              </tasks>
+              <resourceRoot>${project.build.directory}/refactored-shared-sources/main/resources</resourceRoot> <!-- not yet supported -->
+            </configuration>
+            <goals><goal>run</goal></goals>
+          </execution>
+        </executions>
+      </plugin>
+
     </plugins>
 
   </build>
