--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -48,45 +48,19 @@
                   <version>${version}</version>
                   <classifier>javadoc</classifier>
                 </artifactItem>
+                <!--
+                TODO/CHECK: o.a.m.shared_impl.* javadoc automatically included?
                 <artifactItem>
-                  <groupId>org.apache.myfaces.commons</groupId>
-                  <artifactId>myfaces-commons</artifactId>
-                  <version>1.1.3-SNAPSHOT</version>
+                  <groupId>org.apache.myfaces.shared</groupId>
+                  <artifactId>myfaces-shared-impl</artifactId>
+                  <version>1.1.2-SNAPSHOT</version>
                   <classifier>javadoc</classifier>
                 </artifactItem>
+                -->
               </artifactItems>
               <outputDirectory>${project.build.directory}/javadoc</outputDirectory>
             </configuration>
           </execution>
-
-          <execution>
-            <id>copy-lib</id>
-            <phase>package</phase>
-            <goals>
-              <goal>copy</goal>
-            </goals>
-            <configuration>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>org.apache.myfaces.core</groupId>
-                  <artifactId>myfaces-api</artifactId>
-                  <version>${version}</version>
-                </artifactItem>
-                <artifactItem>
-                  <groupId>org.apache.myfaces.core</groupId>
-                  <artifactId>myfaces-impl</artifactId>
-                  <version>${version}</version>
-                </artifactItem>
-                <artifactItem>
-                  <groupId>org.apache.myfaces.commons</groupId>
-                  <artifactId>myfaces-commons</artifactId>
-                  <version>1.1.3-SNAPSHOT</version>
-                </artifactItem>
-              </artifactItems>
-              <outputDirectory>${project.build.directory}/assembly-lib</outputDirectory>
-            </configuration>
-          </execution>
-
           <execution>
             <id>copy-tlddoc</id>
             <phase>package</phase>
