reintroduced shared-impl and shared-tomahawk submodules for better IDE support
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/1_1_2@382026 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -40,4 +40,18 @@
     <module>impl</module>
   </modules>
 
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <!-- this version has already the sources classifier feature -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-idea-plugin</artifactId>
+          <version>2.0-beta-2-SNAPSHOT</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
 </project>
