--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
+  <parent>
+    <groupId>org.apache.myfaces.maven</groupId>
+    <artifactId>myfaces-master</artifactId>
+    <version>1.0.1-SNAPSHOT</version>	  
+  </parent>
+
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
   <artifactId>myfaces-core-project</artifactId>
@@ -9,12 +15,6 @@
   <version>1.1.2-SNAPSHOT</version>
   <name>Core Project</name>
   <url>http://myfaces.apache.org/projects</url>
-
-  <parent>
-    <groupId>org.apache.myfaces.maven</groupId>
-    <artifactId>myfaces-master</artifactId>
-		<version>1.0.0</version>	  
-  </parent>
 
   <scm>
     <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk</connection>
@@ -39,19 +39,5 @@
     <module>api</module>
     <module>impl</module>
   </modules>
-
-
-  <build>
-    <pluginManagement>
-      <plugins>
-        <!-- this version has already the sources classifier feature -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-idea-plugin</artifactId>
-          <version>2.0-beta-2-SNAPSHOT</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
 
 </project>
