MYFACES-1173, reported by Wendy Smoak
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@386793 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -138,7 +138,7 @@
     </dependency>
 
     <dependency>
-      <groupId>struts</groupId>
+      <groupId>org.apache.struts.shale</groupId>
       <artifactId>shale-test</artifactId>
       <version>1.0.1-SNAPSHOT</version>
       <scope>test</scope>
