--- a/api/pom.xml
+++ b/api/pom.xml
@@ -140,7 +140,7 @@
     <dependency>
       <groupId>org.apache.struts.shale</groupId>
       <artifactId>shale-test</artifactId>
-      <version>1.0.1-SNAPSHOT</version>
+      <version>1.0.2</version>
       <scope>test</scope>
     </dependency>
  
