--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
   <parent>
     <groupId>org.apache.myfaces.maven</groupId>
     <artifactId>myfaces-master</artifactId>
-    <version>1.0.2-SNAPSHOT</version>	  
+    <version>1.0.1</version>	  
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
   <artifactId>myfaces-core-project</artifactId>
   <packaging>pom</packaging>
-  <version>1.1.3-SNAPSHOT</version>
+  <version>1.1.2-SNAPSHOT</version>
   <name>Core Project</name>
   <url>http://myfaces.apache.org/projects</url>
 
