--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -35,7 +35,7 @@
     <dependency>
       <groupId>org.apache.myfaces.shared</groupId>
       <artifactId>myfaces-shared-impl</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0</version>
       <scope>provided</scope> <!-- because we add all classes to the jar directly -->
     </dependency>
     
