--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -155,7 +155,7 @@
                 <artifactItem>
                    <groupId>org.apache.myfaces.shared</groupId>
                    <artifactId>myfaces-shared-impl</artifactId>
-                   <version>2.0.0-SNAPSHOT</version>
+                   <version>2.0.0</version>
                  </artifactItem>
                </artifactItems>
                <outputDirectory>${project.build.directory}/classes</outputDirectory>
