--- a/api/pom.xml
+++ b/api/pom.xml
@@ -227,6 +227,51 @@
         </plugins>
       </build>
     </profile>
+
+      <profile>
+        <id>regenerate-component-code</id>
+          <build>
+            <plugins>
+              <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                  <execution>
+                    <id>regenerate-component-code-parts</id>
+                    <phase>process-sources</phase>
+                    <configuration>
+                      <tasks>
+                          <property name="src.dir" value="${project.basedir}/src/main/java"/>
+                          <ant dir="${project.basedir}" antfile="build.xml"
+                                inheritRefs="true" inheritAll="true">
+                            <target name="generate-components"/>
+                          </ant>
+                      </tasks>
+                    </configuration>
+                    <goals><goal>run</goal></goals>
+                  </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                      <groupId>commons-logging</groupId>
+                      <artifactId>commons-logging</artifactId>
+                      <version>1.0.4</version>
+                    </dependency>
+                    <dependency>
+                      <groupId>velocity</groupId>
+                      <artifactId>velocity</artifactId>
+                      <version>1.4</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.myfaces.maven</groupId>
+                        <artifactId>build-tools</artifactId>
+                        <version>1.0.0-SNAPSHOT</version>
+                    </dependency>
+              </dependencies>
+              </plugin>
+             </plugins>
+          </build>
+      </profile>
+
   </profiles>
 
 
