--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -126,7 +126,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>xslt-maven-plugin</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
         <configuration>
           <xslFile>src/main/tld/misc/resolve_entities.xsl</xslFile>
           <srcIncludes>**/*.tld</srcIncludes>
