results of 1.1.2 branch merge
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@394697 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -26,10 +26,10 @@
   <dependencies>
 
     <dependency>
-      <groupId>org.apache.myfaces.core</groupId>
+      <groupId>myfaces</groupId>
       <artifactId>myfaces-api</artifactId>
-      <version>${version}</version>
-      <scope>compile</scope>
+      <version>1.1.1</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
