--- a/pom.xml
+++ b/pom.xml
@@ -1,27 +1,29 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-    <groupId>org.apache.myfaces.maven</groupId>
     <artifactId>myfaces-master</artifactId>
-    <version>1.0.2-SNAPSHOT</version>	  
+    <groupId>org.apache.myfaces.maven</groupId>
+    <version>1.0.2-SNAPSHOT</version>
   </parent>
-
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
   <artifactId>myfaces-core-project</artifactId>
   <packaging>pom</packaging>
-  <version>1.1.3-SNAPSHOT</version>
   <name>Core Project</name>
+  <version>1.1.3-SNAPSHOT</version>
   <url>http://myfaces.apache.org/projects</url>
-
+  <issueManagement>
+    <system>jira</system>
+    <url>http://issues.apache.org/jira/secure/BrowseProject.jspa?id=10600</url>
+  </issueManagement>
   <scm>
     <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk</connection>
     <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk</developerConnection>
     <url>http://svn.apache.org/viewcvs.cgi/myfaces/core/trunk</url>
   </scm>
-
+  <modules>
+    <module>api</module>
+    <module>impl</module>
+  </modules>
   <repositories>
     <repository>
       <snapshots />
@@ -29,29 +31,4 @@
       <url>http://cvs.apache.org/maven-snapshot-repository</url>
     </repository>
   </repositories>
-
-  <issueManagement>
-    <system>jira</system>
-    <url>http://issues.apache.org/jira/secure/BrowseProject.jspa?id=10600</url>
-  </issueManagement>
-
-  <modules>
-    <module>api</module>
-    <module>impl</module>
-  </modules>
-
-
-  <build>
-    <pluginManagement>
-      <plugins>
-        <!-- this version has already the sources classifier feature -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-idea-plugin</artifactId>
-          <version>2.0-beta-2-SNAPSHOT</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
-
 </project>
