--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -119,6 +119,13 @@
       <version>${version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.myfaces.core</groupId>
+      <artifactId>myfaces-api</artifactId>
+      <version>${version}</version>
+    </dependency>
+
+
   </dependencies>
 
 </project>
