--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -26,9 +26,9 @@
   <dependencies>
 
     <dependency>
-      <groupId>myfaces</groupId>
+      <groupId>org.apache.myfaces.core</groupId>
       <artifactId>myfaces-api</artifactId>
-      <version>1.1.1</version>
+      <version>1.1.2</version>
       <scope>provided</scope>
     </dependency>
 
