corrected pom snapshots repository error
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@396573 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,12 @@
   </modules>
   <repositories>
     <repository>
-      <snapshots />
+        <releases>
+          <enabled>false</enabled>
+        </releases>
+        <snapshots>
+          <enabled>true</enabled>
+        </snapshots>
       <id>apache-maven-snapshots</id>
       <url>http://cvs.apache.org/maven-snapshot-repository</url>
     </repository>
