--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -35,7 +35,7 @@
     <dependency>
       <groupId>org.apache.myfaces.shared</groupId>
       <artifactId>myfaces-shared-impl</artifactId>
-      <version>2.0.1-SNAPSHOT</version>
+      <version>2.0.1</version>
       <scope>provided</scope> <!-- because we add all classes to the jar directly -->
     </dependency>
     
@@ -119,7 +119,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>xslt-maven-plugin</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
         <configuration>
           <xslFile>src/main/tld/misc/resolve_entities.xsl</xslFile>
           <srcIncludes>**/*.tld</srcIncludes>
