--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -12,9 +12,9 @@
   <description>This is the MyFaces Impl Subproject Description [INSERT MORE STUFF HERE]</description>
   <url>http://myfaces.apache.org</url>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/tags/1_1_3</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/tags/1_1_3</developerConnection>
-    <url>http://svn.apache.org/viewcvs.cgi/myfaces/core/tags/1_1_3</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/impl</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk/impl</developerConnection>
+    <url>http://svn.apache.org/viewcvs.cgi/myfaces/core/trunk/impl</url>
   </scm>
   <build>
     <resources>
@@ -59,7 +59,7 @@
                 <artifactItem>
                   <groupId>org.apache.myfaces.shared</groupId>
                   <artifactId>myfaces-shared-impl</artifactId>
-                  <version>2.0.1-SNAPSHOT</version>
+                  <version>2.0.1</version>
                 </artifactItem>
               </artifactItems>
               <outputDirectory>${project.build.directory}/classes</outputDirectory>
@@ -77,7 +77,7 @@
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>xslt-maven-plugin</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
             <executions>
               <execution>
                 <id>generate-tld-for-tlddoc</id>
@@ -127,7 +127,7 @@
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>xslt-maven-plugin</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
             <executions>
               <execution>
                 <id>generate-tld-for-tlddoc</id>
