fixed dependency for xslt-maven-plugin from 1.0-SNAPSHOT to 1.0
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@399849 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -119,7 +119,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>xslt-maven-plugin</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
         <configuration>
           <xslFile>src/main/tld/misc/resolve_entities.xsl</xslFile>
           <srcIncludes>**/*.tld</srcIncludes>
@@ -222,7 +222,7 @@
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>xslt-maven-plugin</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
             <executions>
               <execution>
                 <id>generate-tld-for-tlddoc</id>
@@ -273,7 +273,7 @@
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>xslt-maven-plugin</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
             <executions>
               <execution>
                 <id>generate-tld-for-tlddoc</id>
