added oro to pom.xml, added sources to assembly poms
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@405931 13f79535-47bb-0310-9956-ffa450edef68

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -81,7 +81,26 @@
                <outputDirectory>${project.build.directory}/tlddoc</outputDirectory>
              </configuration>
            </execution>
+          <execution>
+            <id>copy-source</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
 
+                <artifactItem>
+                  <groupId>org.apache.myfaces.core</groupId>
+                  <artifactId>myfaces-impl</artifactId>
+                  <version>${version}</version>
+                  <classifier>sources</classifier>
+                </artifactItem>
+
+               </artifactItems>
+               <outputDirectory>${project.build.directory}/src</outputDirectory>
+             </configuration>
+           </execution>
         </executions>
       </plugin>
 
