readded necessary dependencies for "regenerate-component-code" profile
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@410493 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -70,6 +70,23 @@
                 </configuration>
               </execution>
             </executions>
+            <dependencies>
+                <dependency>
+                  <groupId>commons-logging</groupId>
+                  <artifactId>commons-logging</artifactId>
+                  <version>1.0.4</version>
+                </dependency>
+                <dependency>
+                  <groupId>velocity</groupId>
+                  <artifactId>velocity</artifactId>
+                  <version>1.4</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.myfaces.maven</groupId>
+                    <artifactId>build-tools</artifactId>
+                    <version>1.0.4-SNAPSHOT</version>
+                </dependency>
+            </dependencies> 
           </plugin>
         </plugins>
       </build>
