making file well formed
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12@411451 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -248,7 +248,9 @@
       <artifactId>commons-logging</artifactId>
       <version>1.0.4</version>
       <scope>compile</scope>
-    </dependency>      <groupId>cactus</groupId>
+    </dependency>
+    <dependency>
+      <groupId>cactus</groupId>
       <artifactId>cactus</artifactId>
       <version>13-1.7.1</version>
       <scope>test</scope>
