mortbay to the rescue.  because javax.el is in jsp-2.1-6.0.0beta15.jar , there is no longer a manual install step for javaee.jar for both impl and api
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/jsf12@411521 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -95,18 +95,12 @@
       <artifactId>jsp</artifactId>
       <version>2.1-6.0.0beta15</version>
       <scope>compile</scope>
-    </dependency>  
-    <!-- 
-    
-    Download Glassfish http://java.sun.com/javaee/downloads/index.jsp
-    run this command on AppServer\lib\javaee.jar to install locally
-    mvn install:install-file -DgeneratePom=true -Dfile=javaee.jar -DgroupId=javax -DartifactId=javaee -Dversion=5.0 -Dpackaging=jar
-    
-    -->
+    </dependency>
     <dependency>
-       <groupId>javax</groupId>
-	   <artifactId>javaee</artifactId>
-	   <version>5.0</version>
+      <groupId>temp</groupId>
+      <artifactId>impl</artifactId>
+      <version>1.2</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
